fix(ui): fix text color in commit history page for dark mode
Ref: SRX-520HDP

--- a/services/frontend-service/src/ui/components/CommitInfo/CommitInfo.scss
+++ b/services/frontend-service/src/ui/components/CommitInfo/CommitInfo.scss
@@ -71,4 +71,5 @@ Copyright freiheit.com*/
     .select-timezone {
         margin-bottom: 10px;
     }
+    color: var(--mdc-theme-on-background-dark);
 }
